--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ sass:
   style: compressed
 # 作者信息
 author:
-  name: Libragen Eric Zhou
-  email: dejavuzhou@qq.com
-  link: http://captcha.mojotv.cn
+  name: KOKO
+  email: 1903599011@qq.com
+  link: http://gezeliheid-koko.github.io
   weibo: http://weibo.com/u/2706451481?is_all=1
-  github: http://github.com/dejavuzhou
+  github: http://github.com/Gezeliheid-KOKO
 
 # 站点信息
-title: Libra中文网
-description: Libra中文网:最权威的facebook libra数字货币资讯分享网站
-url: https://libragen.cn
+title: Hello~This is KOKO!
+description: Welcome to explore the mysteries of the WEB!
+url: https://gezeliheid.github.io
 rss_url: /pages/atom.xml
 comment_api: https://felix.mojotv.cn
 
@@ -48,21 +48,11 @@ webmaster_verifications:
   baidu: bc3262cde0438adc9418251d9e63476b
   360: 4f66b4f11f2ba5c4a48abf000c5e5cbd
 
-twitter:
-  username: LibraGen
-  card: summary
-
-facebook:
-  app_id: 1234
-  publisher: 1234
-  admins: 1234
 
 social:
-  name: Eric Zhou
+  name: KOKO
   links:
-  - https://twitter.com/neochau
   - https://github.com/dejavuzhou
   - https://github.com/mojocn
   - https://github.com/JJJJJJJerk
-  - https://weibo.com/dejavuzhou/home
-  - http://captcha.mojotv.cn
+
