--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,6 @@ author:
   name: KOKO
   email: 1903599011@qq.com
   link: http://gezeliheid-koko.github.io
-  weibo: http://weibo.com/u/2706451481?is_all=1
   github: http://github.com/Gezeliheid-KOKO
 
 # 站点信息
@@ -17,7 +16,6 @@ title: Hello~This is KOKO!
 description: Welcome to explore the mysteries of the WEB!
 url: https://gezeliheid.github.io
 rss_url: /pages/atom.xml
-comment_api: https://felix.mojotv.cn
 
 # avatar头像及Favicon
 avatar: /assets/蜡笔小新.jpg
@@ -25,10 +23,10 @@ favicon: /assets/蜡笔小新.jpg
 logo: /assets/蜡笔小新.jpg
 # Jekyll Plugin
 # https://help.github.com/articles/adding-jekyll-plugins-to-a-github-pages-site/
-plugins:
+
 
 # 定义你的分类
-categories: News Video Tech Finance
+categories: Tech
 
 # 排除文件夹
 exclude: [robot,util,config,tutorials,main.go,install.sh,jekyll.sh,Gemfile,Gemfile.lock,jekyll_run.sh, codebase,go.mod,go.sum,util]
@@ -39,19 +37,9 @@ ga_id: UA-129013660-6
 # google adsense ID
 gad_id: pub-6269173703140859
 
-webmaster_verifications:
-  google: 1234
-  bing: F71F639CAE579E63E44E43522ADED67F
-  alexa: 1234
-  yandex: 1234
-  baidu: bc3262cde0438adc9418251d9e63476b
-  360: 4f66b4f11f2ba5c4a48abf000c5e5cbd
-
-
 social:
   name: KOKO
   links:
-  - https://github.com/dejavuzhou
-  - https://github.com/mojocn
-  - https://github.com/JJJJJJJerk
+  - https://github.com/Gezeliheid-KOKO
+
 
